# MyNdiApp

./: .gitignore  AGENTS.md  CLAUDE.md  NDI_SETUP.md  README.md  RESTRUCTURING_PLAN.md  SUPPORT.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/soerjo/myfirstapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndi_wrapper.cpp
app/src/main/java/com/soerjo/myfirstapp/: MainActivity.kt  NDIWrapper.kt
app/src/main/java/com/soerjo/myfirstapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/soerjo/myndicam/: MainActivity.kt  MyNdiApp.kt  NDIWrapper.kt
app/src/main/java/com/soerjo/myndicam/core/common/: Constants.kt
app/src/main/java/com/soerjo/myndicam/core/di/: AppModule.kt
app/src/main/java/com/soerjo/myndicam/core/manager/: NdiManager.kt  (+1 more)
app/src/main/res/layout/: fragment_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/soerjo/myfirstapp/: ExampleUnitTest.kt
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle.kts
ndi/: build.gradle.kts
ndi/src/main/cpp/: ndi_wrapper.cpp
ndi/src/main/cpp/Include/: Processing.NDI.DynamicLoad.h
ndi/src/main/java/com/soerjo/ndi/: NDIManager.kt  NDISender.kt
ndi/src/main/java/com/soerjo/ndi/internal/: NDIWrapper.kt
ndi/src/main/java/com/soerjo/ndi/model/: TallyState.kt
(+69 files in other folders)
